--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -31,7 +31,7 @@ ru:
 
   time:
     formats:
-      default: "%a, %d %b %Y, %H:%M:%S %z"
+      default: "%e %B в %H:%M"
       short: "%d %b, %H:%M"
       long: "%d %B %Y, %H:%M"
 
