Layout details and form hints: Done

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -215,4 +215,13 @@ ru:
       body: "Привет!\n\nПриглашаю тебя воспользоваться сервисом Bookmate — это книжный клуб, где можно читать электронные книги в один клик: свои собственные, книги друзей и из библиотеки клуба."
       my_posts_label: "Мои параграфы:"
       make_yours_label: "Начни писать свои:"
+  
+  settings:
+      profile:
+          about_hint: "Пара слов о себе."
+  
+  post:
+      song_code_hint: "Сюда вставляете код понравившейся песни с Простоплеера или Веборамы."
+  
+  
           
