Removed th sqlite3 from Gemfile

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -212,7 +212,7 @@ ru:
   
   invites:
       subject: "%{sender} приглашает вас на Talks"
-      body: "Привет!\n\nПриглашаю тебя воспользоваться сервисом Bookmate — это книжный клуб, где можно читать электронные книги в один клик: свои собственные, книги друзей и из библиотеки клуба."
+      body: "Привет!\n\nЧтобы каждый раз не вспоминать мучительно тот диалог с друзьями, с ностальгией рассматривая любимую фотографию и слушая песню, которая играла в тот самый момент, предлагаю тебе присоединиться к Talks. Здесь ты можешь воссоздать атмосферу давно ушедшего вечера и напомнить о нем своим друзьям, всего лишь прислав ссылку на свой аккаунт."
       my_posts_label: "Мои параграфы:"
       make_yours_label: "Начни писать свои:"
   
