--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -221,7 +221,4 @@ ru:
           about_hint: "Пара слов о себе."
   
   post:
-      song_code_hint: "Сюда вставляете код понравившейся песни с Простоплеера или Веборамы."
-  
-  
-          
+      song_code_hint_html: "Сюда вставляете код понравившейся песни с <a href='http://prostopleer.com'>Простоплеера</a> или <a href='http://weborama.ru'>Веборамы</a>."
