week page with admin control elements

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -237,4 +237,5 @@ ru:
   weeks:
       create_succeed: "Новая неделя успешно создана."
       update_succeed: "Неделя была успешно изменена."
+      status_change_fail: "Не удалось изменить статус недели."
       
