--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -226,6 +226,8 @@ ru:
   
   post:
       song_code_hint_html: "Сюда вставляете код понравившейся песни с <a href='http://prostopleer.com'>Простоплеера</a> или <a href='http://weborama.ru'>Веборамы</a>."
+      next_post_link: "→"
+      previous_post_link: "←"
       
   feed:
       new_posts: "Новые параграфы"
